[project]
name = "cybersec-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "boto3>=1.43.14",
    "httpx>=0.28.1",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tavily-python>=0.7.24",
    "textual>=8.2.7",
    "trafilatura>=2.0.0",
]
